tests/fails/arith.t
import "compiler/liszt"

mesh = LoadMesh("examples/mesh.lmesh")
local vk = liszt_kernel(v)
    var x = {1, 2, 3} ^ 4
end
mesh.vertices:map(vk)
